# CellJanus

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml
.github/workflows/: publish.yml
celljanus/: __init__.py  __main__.py  align.py  classify.py  cli.py  config.py  download.py  extract.py  pipeline.py  qc.py  scrnaseq.py  utils.py  visualize.py
celljanus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
result/classification/: kraken2_output.txt  kraken2_report.txt
result/tables/: cell_species_counts.csv  cell_species_long.csv  cell_species_normalized.csv  cell_summary.csv  pipeline_summary.csv  species_summary.csv
test_results/01_qc/: reads_R1_fastp.html  reads_R1_fastp.json
test_results/02_alignment/: host_align_stats.txt
test_results/04_classification/: bracken_S.txt  kraken2_output.txt  kraken2_report.txt  kraken2_report_bracken_species.txt
test_results/06_tables/: output_manifest.csv  pipeline_summary.csv  species_abundance.csv
testdata/: README.md  build_test_refs.py
testdata/refs/host_genome/: host.2.bt2  host.3.bt2  host.4.bt2  host.fa  host.rev.2.bt2
testdata/refs/kraken2_testdb/: database.kraken  database150mers.kmer_distrib  database150mers.kraken  hash.k2d  library_seqs.fa  opts.k2d  seqid2taxid.map  taxo.k2d
testdata/scrnaseq/: barcodes.txt
tests/: conftest.py  generate_test_data.py  generate_testdata.py  test_celljanus.py
